Sat Feb 24 00:06:37 1996  Theodore Y. Ts'o  <tytso@dcl>

	* k5mech.c (krb5_gss_initialize): No longer need to call
		name-type/mechanism registration function.  This is now
		done for us by the generic intialization function.
		Add support for new V2 call gss_wrap_size_limit.

Sat Feb 24 11:45:05 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* import_sec_context.c (krb5_gss_import_sec_context): Do not
		shadow parameter ctx.

	* inq_context.c (krb5_gss_inquire_context): Do not shadow
		parameter ctx.

	* rel_oid.c (krb5_gss_internal_release_oid): Change to match prototype.

	* process_context_token.c (krb5_gss_process_context_token): Change
		to match prototype.

Sat Feb 24 00:06:37 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapiP_krb5.h: Changed most krb5 gssapi functions to take a
		void * as their first argument, instead of a krb5_context.
		Makes for a cleaner interface to the mechanism glue layer.

	* k5mech.c (krb5_gss_initialize): Call name-type/mechanism
	        registration function so that mechanism glue layer knows
		whether or not a name needs to be lazy evaluated or not.

Tue Feb  6 23:55:45 1996  Theodore Y. Ts'o  <tytso@dcl>

	* pname_to_uid.c (krb5_pname_to_uid): Instead of using specialized
		code to derive the username from a kerberos principal, use
		krb5_aname_to_lname().  Added extra argument for the
		context structure.

Fri Jan 26 03:09:32 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* init_sec_context.c (make_ap_req): Make sure we get a DES session key.

Wed Jan 24 20:46:37 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* pname_to_uid.c (krb5_pname_to_uid): Changed def'n of
		krb5principalname to static so K&R compilers won't lose on
		automatic aggregate initialization.

Wed Jan 24 13:21:37 1996  Theodore Y. Ts'o  <tytso@dcl>

	* import_name.c (krb5_gss_import_name): Don't assume that the
		input_name_buffer is null terminated, when it contains a
		string.  Fix gcc warnings.
